Improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -1108,10 +1108,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>A Legacy of Trust & Quality</h3>
-                    <p>Jay Gobind Traders is a family-owned business established in 2012 by Yugal Kishor Chaudhary and Rakesh Chaudhary with the vision of providing quality services across multiple sectors. Based in the heart of Nepal, we have grown from a small trading company to a diversified enterprise serving thousands of customers.
+                    <p>Jay Gobind Traders is a family-owned business established in 2012 by Yugal Kishor Chaudhary and Rakesh Kumar Chaudhary with the vision of providing quality services across multiple sectors. Based in the heart of Nepal, we have grown from a small trading company to a diversified enterprise serving thousands of customers.
                     </p>
-                    <p>Jay Gobind Traders is a family-owned business established in 2012 by Yugal Kishor Chaudhary and Rakesh Chaudhary with the vision of providing quality services across multiple sectors. Based in the heart of Nepal, we have grown from a small trading company to a diversified enterprise serving thousands of customers.
-                    </p>
+                  
                     <div class="about-stats">
                         <div class="stat-item">
                             <div class="stat-number">10+</div>
@@ -1365,7 +1364,7 @@
                             </svg>
                             <div class="contact-item-content">
                                 <h4>Business Hours</h4>
-                                <p>Sunday - Saturday: 8:00 AM - 9:00 PM</p>
+                                <p>Sunday - Friday: 8:00 AM - 9:00 PM</p>
                             </div>
                         </div>
                     </div>
