--- a/index.html
+++ b/index.html
@@ -47,43 +47,43 @@
             top: 0;
             left: 0;
             right: 0;
-            background: #ffffff; /* pure white */
-            backdrop-filter: none;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
             z-index: 1000;
-            padding: 0.3rem 0;
+            padding: 0.3rem 2rem;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .nav-container {
-            width: 100%;
-            margin: 0;
-            padding: 0 1rem;
+            max-width: 1400px;
+            margin: 0 auto;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            min-height: 64px; /* prevents menu cutoff */
         }
 
         .logo {
             display: flex;
             align-items: center;
             text-decoration: none;
-            margin: 0;
-            padding: 0;
+            transition: transform 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.02);
         }
 
         .logo img {
-            height: 160px;
+            height: 140px;
             width: auto;
             display: block;
-            margin-top: -25px;
-            margin-bottom: -25px;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
         }
 
         .nav-links {
             display: flex;
             gap: 2.5rem;
             list-style: none;
-            align-items: center;
         }
 
         .nav-links a {
@@ -623,36 +623,13 @@
         .gallery-item:nth-child(1) {
             grid-column: span 2;
             grid-row: span 2;
-            background: linear-gradient(135deg, var(--coal-black), #444);
         }
 
-        .gallery-item:nth-child(2) {
-            background: linear-gradient(135deg, var(--forest-green), #5a8a52);
-        }
-
-        .gallery-item:nth-child(3) {
-            background: linear-gradient(135deg, var(--terracotta), #d08070);
-        }
-
-        .gallery-item svg {
-            width: 50px;
-            height: 50px;
-            stroke: rgba(255, 255, 255, 0.5);
-        }
-
-        .gallery-item:nth-child(1) svg {
-            width: 80px;
-            height: 80px;
-        }
-
-        .gallery-placeholder-text {
-            position: absolute;
-            bottom: 1rem;
-            left: 1rem;
-            right: 1rem;
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 0.9rem;
-            text-align: center;
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         /* Contact Section */
@@ -846,7 +823,7 @@
             display: block;
             width: 25px;
             height: 2px;
-            background: var(--coal-black);
+            background: var(--cream);
             margin: 5px 0;
             transition: all 0.3s ease;
         }
@@ -876,13 +853,17 @@
                 display: block;
             }
 
+            .logo img {
+                height: 100px;
+            }
+
             .nav-links {
                 display: none;
                 position: absolute;
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: #ffffff;
+                background: var(--coal-black);
                 flex-direction: column;
                 padding: 2rem;
                 gap: 1.5rem;
@@ -1059,7 +1040,7 @@
             }
 
             nav {
-                padding: 0.8rem 1rem;
+                padding: 0.3rem 1rem;
             }
 
             .logo {
@@ -1073,7 +1054,7 @@
     <nav>
         <div class="nav-container">
             <a href="#home" class="logo">
-                <img src="Untitled design.svg" alt="Jay Gobind Traders Logo">
+                <img src="Untitleddesign2.png" alt="Jay Gobind Traders Logo">
             </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
@@ -1252,7 +1233,7 @@
             <div class="proprietors-grid">
                 <div class="proprietor-card">
                     <div class="proprietor-photo">
-                        <img src="rakeshmama.jpg.PNG" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="Rakesh.jpeg" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h3>Rakesh Kumar Chaudhary</h3>
                     <p class="role">Proprietor</p>
@@ -1277,52 +1258,31 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Coal Distribution</span>
+                    <img src="Gallery/coal_distribution.jpg" alt="Coal Distribution" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Fresh Vegetables</span>
+                    <img src="Gallery/Fruit.jpg" alt="Fresh Fruits" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Bus Service</span>
+                    <img src="Gallery/Bus.PNG" alt="Bus Service" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Our Team</span>
+                    <img src="Gallery/Vegetable.jpg" alt="Fresh Vegetables" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Warehouse</span>
+                    <img src="Gallery/Truck.jpg" alt="Goods Transport" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="gallery-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                        <circle cx="8.5" cy="8.5" r="1.5"/>
-                        <polyline points="21 15 16 10 5 21"/>
-                    </svg>
-                    <span class="gallery-placeholder-text">Office</span>
+                    <img src="Gallery/Fruit2.jpg" alt="Fruits" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="gallery-item">
+                    <img src="Gallery/fruit3.jpg" alt="Fruits" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="gallery-item">
+                    <img src="Gallery/vegetable3.jpg" alt="Vegetables" style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
+                <div class="gallery-item">
+                    <img src="Gallery/brick1.jpg" alt="Brick Supplier" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -1454,10 +1414,14 @@
             });
         });
 
-        // Keep navbar white on scroll
+        // Navbar background on scroll
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('nav');
-            nav.style.background = '#ffffff';
+            if (window.scrollY > 50) {
+                nav.style.background = 'rgba(255, 255, 255, 0.98)';
+            } else {
+                nav.style.background = 'rgba(255, 255, 255, 0.95)';
+            }
         });
 
         // Elegant scroll animations
