Update director titles to Managing Director and add Instagram link to Quick Links

--- a/index.html
+++ b/index.html
@@ -1606,10 +1606,10 @@
             <div class="proprietors-grid">
                 <div class="proprietor-card">
                     <div class="proprietor-photo">
-                        <img src="Rakesh.jpeg" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="Rakesh.PNG" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h3>Rakesh Kumar Chaudhary</h3>
-                    <p class="role">Director</p>
+                    <p class="role">Managing Director</p>
                     <button class="director-popup-btn" onclick="openDirectorPopup('rakesh-popup')">Director's message</button>
                 </div>
                 <div class="proprietor-card">
@@ -1617,7 +1617,7 @@
                         <img src="NewYugal.jpg" alt="Yugal Kishor Chaudhary" style="width: 100%; height: 100%; object-fit: cover; object-position: center top; border-radius: 50%;">
                     </div>
                     <h3>Yugal Kishor Chaudhary</h3>
-                    <p class="role">Director</p>
+                    <p class="role">Managing Director</p>
                     <button class="director-popup-btn" onclick="openDirectorPopup('yugal-popup')">Director's message</button>
                 </div>
             </div>
@@ -1628,12 +1628,12 @@
     <div id="rakesh-popup" class="director-popup-overlay" onclick="closeDirectorPopup('rakesh-popup')">
         <div class="director-popup-content" onclick="event.stopPropagation()">
             <div class="director-popup-image">
-                <img src="Rakesh.jpeg" alt="Rakesh Kumar Chaudhary">
+                <img src="Rakesh.PNG" alt="Rakesh Kumar Chaudhary">
             </div>
             <div class="director-popup-text">
                 <span class="director-popup-close" onclick="closeDirectorPopup('rakesh-popup')">&times;</span>
                 <h3>Rakesh Kumar Chaudhary</h3>
-                <p class="director-popup-role">Director</p>
+                <p class="director-popup-role">Managing Director</p>
                 <p class="director-popup-message">Jay Gobind Traders is built on the legacy of my father, whose work in agriculture taught us the value of integrity, hard work, and service to the community. By establishing a strong supply network in Kathmandu, we earned the trust of our customers and maintained a leading position in the vegetable supply market. Over time, we expanded our operations into transport, coal import, and brick industry supply, ensuring reliable and quality-driven services across Nepal. Our focus remains clear—deliver consistently, uphold customer satisfaction, and continue growing with professionalism and commitment.</p>
             </div>
         </div>
@@ -1647,7 +1647,7 @@
             <div class="director-popup-text">
                 <span class="director-popup-close" onclick="closeDirectorPopup('yugal-popup')">&times;</span>
                 <h3>Yugal Kishor Chaudhary</h3>
-                <p class="director-popup-role">Director</p>
+                <p class="director-popup-role">Managing Director</p>
                 <p class="director-popup-message">Over the years, Jay Gobind Traders has evolved from a small, family-driven enterprise into a diversified trading and supply company. We began by building stability in the spice market and gradually expanded into coal, brick, agriculture supply, and goods transport to meet the needs of customers across Nepal. Our emphasis on timely delivery, strong networks, and fair pricing has earned us long-standing trust, especially among brick factories and industrial clients. As we continue to diversify—including expansion into the transport sector—our focus remains on reliability, professionalism, and long-term customer partnerships.</p>
             </div>
         </div>
@@ -1791,6 +1791,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="https://www.facebook.com/profile.php?id=61585395127190" target="_blank">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/jay_gobind_traders?igsh=czNzaDRiMHVzZXJ0&utm_source=qr" target="_blank">Instagram</a></li>
                 </ul>
             </div>
             <div class="footer-links">
