--- a/index.html
+++ b/index.html
@@ -156,9 +156,14 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            background-attachment: fixed;
             opacity: 0;
             transition: opacity 1.5s ease-in-out;
+        }
+
+        @media (min-width: 769px) {
+            .hero-background-slide {
+                background-attachment: fixed;
+            }
         }
 
         .hero-background-slide.active {
@@ -1177,6 +1182,10 @@
                 padding: 4rem 1.5rem;
             }
 
+            .hero {
+                padding-top: 80px;
+            }
+
             .mobile-menu-btn {
                 display: block;
             }
@@ -1254,6 +1263,10 @@
         @media (max-width: 480px) {
             section {
                 padding: 3rem 1rem;
+            }
+
+            .hero {
+                padding-top: 80px;
             }
 
             .hero h1 {
@@ -1606,7 +1619,7 @@
             <div class="proprietors-grid">
                 <div class="proprietor-card">
                     <div class="proprietor-photo">
-                        <img src="Rakesh.PNG" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="rakesh1.png" alt="Rakesh Kumar Chaudhary" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h3>Rakesh Kumar Chaudhary</h3>
                     <p class="role">Managing Director</p>
@@ -1628,7 +1641,7 @@
     <div id="rakesh-popup" class="director-popup-overlay" onclick="closeDirectorPopup('rakesh-popup')">
         <div class="director-popup-content" onclick="event.stopPropagation()">
             <div class="director-popup-image">
-                <img src="Rakesh.PNG" alt="Rakesh Kumar Chaudhary">
+                <img src="rakesh1.png" alt="Rakesh Kumar Chaudhary">
             </div>
             <div class="director-popup-text">
                 <span class="director-popup-close" onclick="closeDirectorPopup('rakesh-popup')">&times;</span>
