Reduce header size on mobile devices

--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,16 @@
             }
 
             .hero {
-                padding-top: 80px;
+                padding-top: 70px;
+            }
+
+            nav {
+                padding: 0.5rem 1rem;
+            }
+
+            .logo img {
+                width: 80px;
+                height: 107px;
             }
 
             .mobile-menu-btn {
@@ -1266,7 +1275,7 @@
             }
 
             .hero {
-                padding-top: 80px;
+                padding-top: 70px;
             }
 
             .hero h1 {
@@ -1398,16 +1407,16 @@
             }
 
             nav {
-                padding: 0.8rem 1rem;
+                padding: 0.4rem 0.8rem;
             }
 
             .logo img {
-                width: 100px;
-                height: 133px;
+                width: 70px;
+                height: 93px;
             }
             
             .logo {
-                margin-left: -1rem;
+                margin-left: -0.5rem;
             }
         }
     </style>
