--- a/index.html
+++ b/index.html
@@ -468,6 +468,16 @@
             padding: 6rem 2rem;
         }
 
+        /* Improved scroll rhythm for anchor jumps on mobile and desktop */
+        section > .section-container {
+            scroll-margin-top: 90px;
+        }
+
+        /* Subtle visual section separation */
+        section + section {
+            border-top: 1px solid rgba(0, 0, 0, 0.04);
+        }
+
         .section-container {
             max-width: 1200px;
             margin: 0 auto;
@@ -857,8 +867,9 @@
 
         .director-popup-text h3 {
             color: var(--dark-navy);
-            font-size: 1.8rem;
+            font-size: 1.7rem;
             margin-bottom: 0.5rem;
+            white-space: nowrap;
         }
 
         .director-popup-role {
@@ -896,17 +907,76 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                -webkit-font-smoothing: antialiased;
+                text-rendering: optimizeLegibility;
+            }
+            p {
+                max-width: 38ch;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .section-header h2 {
+                letter-spacing: 0.3px;
+            }
+            .about-text h3,
+            .service-content h3,
+            .contact-info h3 {
+                letter-spacing: 0.2px;
+            }
+            a,
+            button {
+                min-height: 44px;
+            }
+            .hero-service-badge {
+                line-height: 1.4;
+            }
             .director-popup-content {
                 flex-direction: column;
-                max-height: 90vh;
+                height: 90vh;
             }
 
             .director-popup-image {
-                flex: 0 0 250px;
+                height: 45vh;
+                flex: none;
+            }
+
+            .director-popup-image img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center top;
             }
 
             .director-popup-text {
+                flex: 1;
+                overflow-y: auto;
                 padding: 2rem;
+            }
+
+            .nav-links {
+                position: absolute;
+                top: 64px; /* drop below header */
+                right: 0;
+                left: auto;
+                width: fit-content;
+                min-width: 200px;
+                max-width: 260px;
+                background: rgba(255, 255, 255, 0.98);
+                flex-direction: column;
+                padding: 1.25rem 1.5rem;
+                gap: 1.25rem;
+                text-align: left;
+                box-shadow: -4px 8px 20px rgba(0, 0, 0, 0.15);
+                transform: translateX(110%);
+                transition: transform 0.3s ease;
+                z-index: 9999;
+                display: flex;
+                border-bottom-left-radius: 16px;
+            }
+
+            .nav-links.active {
+                transform: translateX(0);
             }
         }
 
@@ -1179,42 +1249,56 @@
 
         @media (max-width: 768px) {
             section {
-                padding: 4rem 1.5rem;
+                padding: 3rem 1.25rem;
             }
 
             .hero {
+                min-height: 80vh;
                 padding-top: 70px;
+            }
+
+            .section-header {
+                margin-bottom: 2rem;
+            }
+
+            .section-header h2 {
+                margin-bottom: 0.6rem;
+            }
+
+            .hero-services {
+                flex-direction: column;
+                align-items: center;
+                gap: 0.75rem;
+                margin-top: 1.5rem;
+            }
+
+            .director-popup-text {
+                padding: 1.5rem;
             }
 
             nav {
                 padding: 0.5rem 1rem;
+                padding-top: 0.25rem;
+                padding-bottom: 0.25rem;
+            }
+
+            /* Fix logo alignment and size for mobile */
+            .logo {
+                margin-left: 0;
+            }
+
+            .nav-container {
+                padding-left: 0.5rem;
+                height: 64px;
             }
 
             .logo img {
-                width: 80px;
-                height: 107px;
+                width: 110px;
+                height: auto;
             }
 
             .mobile-menu-btn {
                 display: block;
-            }
-
-            .nav-links {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background: rgba(255, 255, 255, 0.98);
-                flex-direction: column;
-                padding: 2rem;
-                gap: 1.5rem;
-                text-align: center;
-                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            }
-
-            .nav-links.active {
-                display: flex;
             }
 
             .hero h1 {
@@ -1223,12 +1307,6 @@
 
             .hero .tagline {
                 font-size: 1.1rem;
-            }
-
-            .hero-services {
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
             }
 
             .about-content {
@@ -1267,15 +1345,42 @@
                 gap: 2rem;
                 text-align: center;
             }
+
+            .footer-links {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 1.5rem;
+                text-align: left;
+            }
+
+            .footer-links h4 {
+                text-align: left;
+            }
         }
 
         @media (max-width: 480px) {
+            .section-header p {
+                max-width: 34ch;
+            }
+            .director-popup-message {
+                font-size: 0.95rem;
+                line-height: 1.65;
+            }
             section {
-                padding: 3rem 1rem;
+                padding: 2.5rem 1rem;
             }
 
             .hero {
+                min-height: 70vh;
                 padding-top: 70px;
+            }
+
+            body {
+                font-size: 0.95rem;
+            }
+
+            p {
+                line-height: 1.6;
             }
 
             .hero h1 {
@@ -1360,7 +1465,7 @@
             }
 
             .service-content {
-                padding: 1.5rem;
+                padding: 1.25rem;
             }
 
             .service-content h3 {
@@ -1368,12 +1473,12 @@
             }
 
             .gallery-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
                 gap: 1rem;
             }
 
-            .gallery-item:nth-child(1) {
-                grid-column: span 1;
+            .gallery-item {
+                border-radius: 12px;
             }
 
             .proprietor-photo {
@@ -1410,9 +1515,10 @@
                 padding: 0.4rem 0.8rem;
             }
 
+            /* Replace logo img rule for smaller mobile breakpoint */
             .logo img {
-                width: 70px;
-                height: 93px;
+                width: 100px;
+                height: auto;
             }
             
             .logo {
@@ -1664,7 +1770,7 @@
     <div id="yugal-popup" class="director-popup-overlay" onclick="closeDirectorPopup('yugal-popup')">
         <div class="director-popup-content" onclick="event.stopPropagation()">
             <div class="director-popup-image">
-                <img src="NewYugal.jpg" alt="Yugal Kishor Chaudhary">
+                <img src="yugalnew.png" alt="Yugal Kishor Chaudhary">
             </div>
             <div class="director-popup-text">
                 <span class="director-popup-close" onclick="closeDirectorPopup('yugal-popup')">&times;</span>
