Update mobile gallery layout, footer links, and reduce Yugal's popup image size

--- a/index.html
+++ b/index.html
@@ -824,6 +824,10 @@
             object-fit: cover;
         }
 
+        #yugal-popup .director-popup-image {
+            flex: 0 0 180px;
+        }
+
         .director-popup-text {
             flex: 1;
             padding: 2.5rem;
@@ -904,6 +908,10 @@
 
             .director-popup-image {
                 flex: 0 0 250px;
+            }
+
+            #yugal-popup .director-popup-image {
+                flex: 0 0 150px;
             }
 
             .director-popup-text {
@@ -1333,7 +1341,7 @@
             }
 
             #yugal-popup .director-popup-image {
-                flex: 0 0 180px;
+                flex: 0 0 120px;
             }
 
             .section-header h2 {
@@ -1387,7 +1395,7 @@
             }
 
             .gallery-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
                 gap: 1rem;
             }
 
@@ -1423,6 +1431,16 @@
 
             .footer-content {
                 padding: 0 1rem;
+                grid-template-columns: 1fr 1fr;
+                gap: 1.5rem 1rem;
+            }
+
+            .footer-content > .footer-brand {
+                grid-column: 1 / -1;
+            }
+
+            .footer-content > .footer-links {
+                text-align: left;
             }
 
             nav {
