SEO: add site name, favicon, and logo schema for Google search

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jay Gobind Traders - Coal, Vegetables & Transport Services</title>
+    <title>Jay Gobind Traders | Coal, Brick & Agriculture Supply in Nepal</title>
+    <meta name="description" content="Jay Gobind Traders is a trusted Nepal-based company specializing in coal import, brick supply, agriculture produce, and goods transport across Nepal.">
+    <link rel="icon" type="image/png" href="newlogo.png">
+    <link rel="apple-touch-icon" href="newlogo.png">
+    <link rel="icon" sizes="48x48" href="newlogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+
     <style>
         :root {
             --dark-navy: #002040;
@@ -1467,6 +1472,23 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Jay Gobind Traders",
+      "url": "https://jaygobindtraders.com.np/"
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Jay Gobind Traders",
+      "url": "https://jaygobindtraders.com.np",
+      "logo": "https://jaygobindtraders.com.np/newlogo.png"
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
